Fix Background-image (Web Project)

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,3 +5,7 @@
   --translate-y: -50%;
   --shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
+
+body {
+  background-image: url('../public/backgroundGalaxy.png') !important;
+}
