--- a/web/src/components/CreateAdBanner/styles.css
+++ b/web/src/components/CreateAdBanner/styles.css
@@ -1,6 +1,5 @@
 div#createAdBannerContainer {
-  background-image: linear-gradient(
-    90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+  background-image: var(--linear-gradient-duo);
   margin-top: 32px;
   padding-top: 4px;
   border-radius: 8px;
