--- a/web/src/views/Games/styles.css
+++ b/web/src/views/Games/styles.css
@@ -15,8 +15,7 @@ div#gamesViewContainer h1 {
 }
 
 div#gamesViewContainer h1 span {
-  background-image: linear-gradient(
-    90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+  background-image: var(--linear-gradient-duo);
   background-clip: text;
   color: transparent;
 }
