--- a/web/src/index.css
+++ b/web/src/index.css
@@ -11,3 +11,30 @@
 body {
   background-image: url('../public/backgroundGalaxy.png') !important;
 }
+
+.dialogModalOverlay {
+  background-color: rgb(0 0 0 / 0.6);
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px; 
+}
+
+.dialogModalContent {
+  background-color: rgb(42 38 52 / var(--bg-opacity));
+  color: rgb(255 255 255 / var(--text-opacity));
+  transform: translate(var(--translate-x), var(--translate-y));
+  box-shadow: var(--shadow);
+  padding: 32px 40px;
+  border-radius: 8px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+}
+
+.dialogModalTitle {
+  font-size: 30px;
+  font-weight: 900;
+  line-height: 36px;
+}
