Final Code Review (Web Project)

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-image: url('../public/backgroundGalaxy.png') !important;
+  background-image: url('../backgroundGalaxy.png') !important;
 }
 
 .dialogModalOverlay {
